--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,10 @@
     package="com.anony.mybudgetpal" >
 
     <application
+        android:name=".Application"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:name="com.anony.mybudgetpal.Application"
         android:theme="@style/AppTheme" >
         <activity
             android:name=".activities.CreateBudget"
@@ -16,6 +16,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".activities.AddExpense"
+            android:label="@string/title_activity_add_expense" >
         </activity>
     </application>
 
