--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".activities.CreateBudget"
-            android:label="@string/app_name" >
+            android:name=".activities.LoadingSplash"
+            android:label="@string/title_activity_loading_splash" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,8 +18,16 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".activities.CreateBudget"
+            android:label="@string/title_activity_create_budget" >
+        </activity>
+        <activity
             android:name=".activities.AddExpense"
             android:label="@string/title_activity_add_expense" >
+        </activity>
+        <activity
+            android:name=".activities.Welcome"
+            android:label="@string/title_activity_welcome" >
         </activity>
     </application>
 
