--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.anony.mybudgetpal" >
-
+    <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="15"/>
     <application
         android:name=".Application"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/budget_icon_white"
         android:label="@string/app_name"
         android:theme="@style/DefaultTheme" >
         <activity
